# pytorch-gfx1010

./: README.md  build.sh  install.sh  pyproject.toml  pytorch_gfx1010_autoload.pth  pytorch_gfx1010_autoload.py  setup.py  test_gfx1010.py
patches/: composable_kernel-gfx1010.patch  pytorch-bn-rnn-gfx1010.patch  pytorch-nonzero-gfx1010.patch  pytorch-scatter-add-gfx1010.patch  pytorch-unique-gfx1010.patch
workarounds/: __init__.py  batchnorm_gfx1010.py
